fixed iframe resize temporarily, fixed bg image transition, made solar pallete a little more readable

--- a/styles/InnerNav.module.css
+++ b/styles/InnerNav.module.css
@@ -3,7 +3,7 @@
 	overflow: hidden;
 
 	width: 100%;
-	height: 10rem;
+	height: 50%;
 
 	filter: opacity(0.7);
 	transition: var(--transition-speed);
@@ -32,7 +32,8 @@
 	align-items: center;
 	height: 5rem;
 
-	padding: 1rem;
+	margin: 1rem;
+	padding: 3rem;
 
 	color: var(--text-secondary);
 	text-decoration: none;
